--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     <p class="tx-13 tx-color-03 mg-b-10">Enter your IAM policy in the box below.</p>
                   </div>
                 </div><!-- card-header -->
-                <textarea class="form-control custompolicy mg-t-10 mg-r-10 mg-l-10 mg-b-10" rows="10" placeholder="Enter your policy here..."></textarea>
+                <textarea class="form-control custompolicy" rows="10" placeholder="Enter your policy here..."></textarea>
               </div><!-- card -->
             </div><!-- col -->
             <div class="col-lg-12 col-xl-12 mg-t-12">
