--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
                         <td>A managed policy or managed policy action tag that indicates the presence of an action that could potentially lead to a privilege escalation.</td>
                       </tr>
                       <tr>
+                        <td><span class="badge badge-danger">undocumented actions</span></td>
+                        <td>A managed policy tag that indicates the presence of undocumented actions within the policy.</td>
+                      </tr>
+                      <tr>
                         <td><span class="badge badge-danger">malformed</span></td>
                         <td>A managed policy tag that indicates the presence of a malformed statement within the policy.</td>
                       </tr>
