--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     <div class="col-6 mg-t-20">
                       <p class="tx-10 tx-uppercase tx-medium tx-color-03 tx-spacing-1 mg-b-5">Unknown</p>
                       <div class="d-flex align-items-center">
-                        <div class="wd-10 ht-10 rounded-circle bg-color-03 mg-r-5"></div>
+                        <div class="wd-10 ht-10 rounded-circle bg-gray-300 mg-r-5"></div>
                         <h6 class="tx-normal tx-rubik mg-b-0"><span id="dashboard-unknown-count"></span> <small id="dashboard-unknown-percent" class="tx-color-04"></small></h6>
                       </div>
                     </div><!-- col -->
