Add links to new cloud providers

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
           <li class="nav-item" id="nav-general-usage"><a href="/usage" class="nav-link"><span>Reference Usage</span></a></li>
           <li class="nav-item" id="nav-general-managedpolicies"><a href="/managedpolicies" class="nav-link"><span>Managed Policies</span></a></li>
           <li class="nav-item" id="nav-general-policyevaluator"><a href="/policyevaluator" class="nav-link"><span>Policy Evaluator</span></a></li>
+          <li class="nav-label mg-t-25">Cloud Providers</li>
+          <li class="nav-item"><a href="https://aws.permissions.cloud/" class="nav-link"><span>AWS</span></a></li>
+          <li class="nav-item"><a href="https://azure.permissions.cloud/" class="nav-link"><span>Azure</span></a></li>
+          <li class="nav-item"><a href="https://gcp.permissions.cloud/" class="nav-link"><span>Google Cloud</span></a></li>
           <li class="nav-label mg-t-25">Reference</li>
           <div id="reference-list"></div>
         </ul>
