Switch to aws prefix

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <meta name="twitter:site" content="@iann0036">
     <meta name="twitter:creator" content="@iann0036">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="permissions.cloud">
+    <meta name="twitter:title" content="aws.permissions.cloud">
     <meta name="twitter:description" content="Permissions Reference for AWS IAM">
     <meta name="twitter:image" content="https://permissions.cloud/assets/img/social.png">
 
     <!-- Facebook -->
-    <meta property="og:url" content="https://permissions.cloud">
-    <meta property="og:title" content="permissions.cloud">
+    <meta property="og:url" content="https://aws.permissions.cloud">
+    <meta property="og:title" content="aws.permissions.cloud">
     <meta property="og:description" content="Permissions Reference for AWS IAM">
 
-    <meta property="og:image" content="https://permissions.cloud/assets/img/social.png">
-    <meta property="og:image:secure_url" content="https://permissions.cloud/assets/img/social.png">
+    <meta property="og:image" content="https://aws.permissions.cloud/assets/img/social.png">
+    <meta property="og:image:secure_url" content="https://aws.permissions.cloud/assets/img/social.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
@@ -32,14 +32,14 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/assets/img/logo.png">
 
-    <title>Permissions Reference for AWS IAM | permissions.cloud</title>
+    <title>Permissions Reference for AWS IAM | aws.permissions.cloud</title>
 
     <link rel="preload" href="https://iann0036.github.io/iam-dataset/map.json" as="fetch" crossorigin>
     <link rel="preload" href="https://iann0036.github.io/iam-dataset/docs.json" as="fetch" crossorigin>
     <link rel="preload" href="https://iann0036.github.io/iam-dataset/iam_definition.json" as="fetch" crossorigin>
 
     <!-- omnibox search -->
-    <link rel="search" href="https://permissions.cloud/search.xml" type="application/opensearchdescription+xml" title="permissions.cloud"/>
+    <link rel="search" href="https://aws.permissions.cloud/search.xml" type="application/opensearchdescription+xml" title="aws.permissions.cloud"/>
 
     <!-- vendor css -->
     <link href="/lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -388,9 +388,9 @@
           <div class="row row-xs">
             <div class="col-lg-12 col-xl-12 mg-t-12">
               <div class="card card-body">
-                <h4 class="mg-b-10">About permissions.cloud</h4>
-                <p class="mg-b-10">The permissions.cloud website uses a variety of information gathered within the <a target="_blank" href="https://github.com/iann0036/iam-dataset">IAM Dataset</a> and exposes that information in a clean, easy-to-read format.</p>
-                <p class="mg-b-10">permissions.cloud was built in order to provide an alternate, community-driven source of truth for AWS identity. If you would like to contribute to or suggest a feature for this website, please <a target="_blank" href="https://github.com/iann0036/permissions.cloud/issues">raise it</a> in the permissions.cloud <a target="_blank" href="https://github.com/iann0036/permissions.cloud">repo</a>. If you have found a data issue with the IAM permissions or API methods, please <a target="_blank" href="https://github.com/iann0036/iam-dataset/issues">raise it</a> in the IAM Dataset <a target="_blank" href="https://github.com/iann0036/iam-dataset">repo</a>.</p>
+                <h4 class="mg-b-10">About aws.permissions.cloud</h4>
+                <p class="mg-b-10">The aws.permissions.cloud website uses a variety of information gathered within the <a target="_blank" href="https://github.com/iann0036/iam-dataset">IAM Dataset</a> and exposes that information in a clean, easy-to-read format.</p>
+                <p class="mg-b-10">aws.permissions.cloud was built in order to provide an alternate, community-driven source of truth for AWS identity. If you would like to contribute to or suggest a feature for this website, please <a target="_blank" href="https://github.com/iann0036/aws.permissions.cloud/issues">raise it</a> in the aws.permissions.cloud <a target="_blank" href="https://github.com/iann0036/aws.permissions.cloud">repo</a>. If you have found a data issue with the IAM permissions or API methods, please <a target="_blank" href="https://github.com/iann0036/iam-dataset/issues">raise it</a> in the IAM Dataset <a target="_blank" href="https://github.com/iann0036/iam-dataset">repo</a>.</p>
                 <p class="mg-b-10">The website can be navigated using the left sidebar or by quickly looking up a specific managed policy, IAM permission or API method in the top search bar.</p>
 
                 <hr class="mg-y-40">
@@ -738,6 +738,6 @@
     <script src="/assets/js/dashforge.sampledata.js"></script>
 
     <!-- main app -->
-    <script src="/assets/js/permissions.cloud.js"></script>
+    <script src="/assets/js/aws.permissions.cloud.js"></script>
   </body>
 </html>
