--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="/lib/jqvmap/jqvmap.min.css" rel="stylesheet">
     <link href="/lib/prismjs/themes/prism-vs.css" rel="stylesheet">
+    <link href="/lib/floating-scroll/jquery.floatingscroll.css" rel="stylesheet">
 
     <!-- DashForge CSS -->
     <link rel="stylesheet" href="/assets/css/dashforge.css">
@@ -732,6 +733,7 @@
     <script src="/lib/jquery.flot/jquery.flot.resize.js"></script>
     <script src="/lib/chart.js/Chart.bundle.js"></script>
     <script src="/lib/prismjs/prism.js" data-manual></script>
+    <script src="/lib/floating-scroll/jquery.floatingscroll.min.js"></script>
 
     <script src="/assets/js/dashforge.js"></script>
     <script src="/assets/js/dashforge.aside.js"></script>
