--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <hr class="mg-y-40">
 
                 <h4 class="mg-b-10">Using the Dashboard</h4>
-                <p class="mg-b-10">The dashboard has a small selection of statistics about the global state of IAM permissions and API methods. Some historic IAM permission data is currently missing and as such you may see some unusual jumps in charting.</p>
+                <p class="mg-b-10">The dashboard has a small selection of statistics about the global state of IAM permissions and API methods.</p>
 
                 <hr class="mg-y-40">
 
