--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-style1 mg-b-10">
                   <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">For tag <span class='tagname'></span></li>
+                  <li class="breadcrumb-item active" aria-current="page"><span class='tagname'></span></li>
                 </ol>
               </nav>
               <h4 class="mg-b-0 tx-spacing--1">Permissions Reference for tag <span class='tagname'></span></h4>
