--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                   <li class="breadcrumb-item active" aria-current="page"><span class='tagname'></span></li>
                 </ol>
               </nav>
-              <h4 class="mg-b-0 tx-spacing--1">Permissions Reference for tag <span class='tagname'></span></h4>
+              <h4 class="mg-b-0 tx-spacing--1">Permissions Reference for Tag <span class='tagname'></span></h4>
             </div>
             <div class="d-none d-md-block">
               <a id="permissions-json-link" href="https://raw.githubusercontent.com/iann0036/iam-dataset/main/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
