--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
           <div class="row row-xs">
             <div class="col-lg-12 col-xl-12 mg-t-12">
-              <div class="card mg-b-10 display-iam" style="display: none;">
+              <div class="card mg-b-10">
                 <div class="card-header pd-t-20 d-sm-flex align-items-start justify-content-between bd-b-0 pd-b-0">
                   <div>
                     <h6 class="mg-b-5">IAM Actions which include <span class='tagname'></span></h6>
@@ -335,58 +335,7 @@
                   </table>
                 </div><!-- table-responsive -->
               </div><!-- card -->
-
-
-              <div class="card mg-b-10 display-api" style="display: none;">
-                <div class="card-header pd-t-20 d-sm-flex align-items-start justify-content-between bd-b-0 pd-b-0">
-                  <div>
-                    <h6 class="mg-b-5">API Methods which include <span class='tagname'></span></h6>
-                    <p class="tx-13 tx-color-03 mg-b-0">You can use the following methods in the AWS CLI, SDKs or API.</p>
-                  </div>
-                  <div class="d-flex mg-t-20 mg-sm-t-0">
-                    <div class="btn-group flex-fill">
-                      <button class="btn btn-white btn-xs iam-link">IAM</button>
-                      <button class="btn btn-white btn-xs active">API</button>
-                    </div>
-                  </div>
-                </div><!-- card-header -->
-                <div class="card-body pd-y-30">
-                  <div class="d-sm-flex">
-                    <div class="media">
-                      <div class="wd-40 wd-md-50 ht-40 ht-md-50 bg-teal tx-white mg-r-10 mg-md-r-10 d-flex align-items-center justify-content-center rounded op-6">
-                        <i data-feather="bar-chart-2"></i>
-                      </div>
-                      <div class="media-body">
-                        <h6 class="tx-sans tx-uppercase tx-10 tx-spacing-1 tx-color-03 tx-semibold tx-nowrap mg-b-5 mg-md-b-8">IAM Actions</h6>
-                        <h4 class="tx-20 tx-sm-18 tx-md-20 tx-normal tx-rubik mg-b-0 iam-count">-</h4>
-                      </div>
-                    </div>
-                    <div class="media mg-t-20 mg-sm-t-0 mg-sm-l-15 mg-md-l-40">
-                      <div class="wd-40 wd-md-50 ht-40 ht-md-50 bg-primary tx-white mg-r-10 mg-md-r-10 d-flex align-items-center justify-content-center rounded op-4">
-                        <i data-feather="bar-chart-2"></i>
-                      </div>
-                      <div class="media-body">
-                        <h6 class="tx-sans tx-uppercase tx-10 tx-spacing-1 tx-color-03 tx-semibold mg-b-5 mg-md-b-8">API Methods</h6>
-                        <h4 class="tx-20 tx-sm-18 tx-md-20 tx-normal tx-rubik mg-b-0 api-count">-</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div><!-- card-body -->
-                <div class="table-responsive">
-                  <table class="table table-dashboard mg-b-0" id="bytag-methods-table">
-                    <thead>
-                      <tr>
-                        <th>Method</th>
-                        <th>Description</th>
-                        <th>IAM Action</th>
-                        <th>ARN Template&nbsp;&nbsp;<a onclick="swapARN()" style="text-transform: none;" href="#" class="badge badge-secondary"><i class="fas fa-exchange-alt"></i> Show <span id="arn-template-state">Original</span></a></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                  </table>
-                </div><!-- table-responsive -->
-              </div><!-- card -->
+              
 
               <div class="card card-body ht-lg-100">
                 <div class="media">
