--- a/index.html
+++ b/index.html
@@ -299,16 +299,7 @@
                       </div>
                       <div class="media-body">
                         <h6 class="tx-sans tx-uppercase tx-10 tx-spacing-1 tx-color-03 tx-semibold tx-nowrap mg-b-5 mg-md-b-8">IAM Actions</h6>
-                        <h4 class="tx-20 tx-sm-18 tx-md-20 tx-normal tx-rubik mg-b-0 iam-count">-</h4>
-                      </div>
-                    </div>
-                    <div class="media mg-t-20 mg-sm-t-0 mg-sm-l-15 mg-md-l-40">
-                      <div class="wd-40 wd-md-50 ht-40 ht-md-50 bg-primary tx-white mg-r-10 mg-md-r-10 d-flex align-items-center justify-content-center rounded op-4">
-                        <i data-feather="bar-chart-2"></i>
-                      </div>
-                      <div class="media-body">
-                        <h6 class="tx-sans tx-uppercase tx-10 tx-spacing-1 tx-color-03 tx-semibold mg-b-5 mg-md-b-8">API Methods</h6>
-                        <h4 class="tx-20 tx-sm-18 tx-md-20 tx-normal tx-rubik mg-b-0 api-count">-</h4>
+                        <h4 class="tx-20 tx-sm-18 tx-md-20 tx-normal tx-rubik mg-b-0 bytag-iam-count">-</h4>
                       </div>
                     </div>
                   </div>
