Add ARN on managed policy

--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@
               </nav>
               <h4 class="mg-b-0 tx-spacing--1 managedpolicyname"></h4>
               <span id="managedpolicytags"></span>
+              <pre id="managedpolicyarn"></pre>
             </div>
             <div class="d-none d-md-block">
               <a id="managedpolicy-json-link" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
