--- a/index.html
+++ b/index.html
@@ -690,11 +690,8 @@
           </div>
 
           <div class="row row-xs">
-            <div class="col-lg-12 col-xl-12 mg-t-12">
+            <div class="col-lg-6 col-xl-6 mg-t-6">
               <div class="card">
-                <div class="card-header d-flex justify-content-between">
-                  <h6 class="lh-5 mg-b-0">Overview</h6>
-                </div><!-- card-header -->
                 <div class="card-body pd-x-20 pd-b-10">
                   <ul class="list-group list-group-flush mg-b-0 tx-13">
                     <li class="list-group-item pd-x-0 d-flex justify-content-between">
@@ -712,6 +709,10 @@
                   </ul>
                 </div><!-- card-body -->
               </div>
+            </div>
+          </div>
+          <div class="row row-xs">
+            <div class="col-lg-12 col-xl-12 mg-t-12">
               <div class="card mg-b-10">
                 <div class="card-header pd-t-20 d-sm-flex align-items-start justify-content-between bd-b-0 pd-b-0">
                   <div>
