--- a/index.html
+++ b/index.html
@@ -691,6 +691,8 @@
 
           <div class="row row-xs">
             <div class="col-lg-6 col-xl-6 mg-t-6">
+            </div>
+            <div class="col-lg-6 col-xl-6 mg-t-6">
               <div class="card">
                 <div class="card-body pd-x-20 pd-b-10">
                   <ul class="list-group list-group-flush mg-b-0 tx-13">
@@ -709,6 +711,7 @@
                   </ul>
                 </div><!-- card-body -->
               </div>
+              <br />
             </div>
           </div>
           <div class="row row-xs">
