--- a/index.html
+++ b/index.html
@@ -839,5 +839,15 @@
 
     <!-- main app -->
     <script src="/assets/js/aws.permissions.cloud.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CKTV6K594Z"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CKTV6K594Z');
+    </script>
   </body>
 </html>
