--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     <title>Permissions Reference for AWS IAM | aws.permissions.cloud</title>
 
-    <link rel="preload" href="https://iann0036.github.io/iam-dataset/map.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://iann0036.github.io/iam-dataset/docs.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://iann0036.github.io/iam-dataset/iam_definition.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://iann0036.github.io/iam-dataset/aws/map.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://iann0036.github.io/iam-dataset/aws/docs.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://iann0036.github.io/iam-dataset/aws/iam_definition.json" as="fetch" crossorigin>
 
     <!-- omnibox search -->
     <link rel="search" href="https://aws.permissions.cloud/search.xml" type="application/opensearchdescription+xml" title="aws.permissions.cloud"/>
@@ -135,7 +135,7 @@
               <h4 class="mg-b-0 tx-spacing--1">Permissions Reference for <span class='servicename'></span></h4>
             </div>
             <div class="d-none d-md-block">
-              <a id="permissions-json-link" href="https://raw.githubusercontent.com/iann0036/iam-dataset/main/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
+              <a id="permissions-json-link" href="https://raw.githubusercontent.com/iann0036/iam-dataset/main/aws/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
               <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase mg-l-5 display-iam api-link" style="display: none;"><i data-feather="code" class="wd-10 mg-r-5"></i> Switch to API</button>
               <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase mg-l-5 display-api iam-link" style="display: none;"><i data-feather="lock" class="wd-10 mg-r-5"></i> Switch to IAM</button>
             </div>
@@ -275,7 +275,7 @@
               <h4 class="mg-b-0 tx-spacing--1">Permissions Reference for Tag <span class='tagname'></span></h4>
             </div>
             <div class="d-none d-md-block">
-              <a id="permissions-json-link" href="https://raw.githubusercontent.com/iann0036/iam-dataset/main/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
+              <a id="permissions-json-link" href="https://raw.githubusercontent.com/iann0036/iam-dataset/main/aws/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
             </div>
           </div>
 
@@ -614,7 +614,7 @@
               <h4 class="mg-b-0 tx-spacing--1">Managed Policies</h4>
             </div>
             <div class="d-none d-md-block">
-              <a href="https://raw.githubusercontent.com/iann0036/iam-dataset/main/managed_policies.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
+              <a href="https://raw.githubusercontent.com/iann0036/iam-dataset/main/aws/managed_policies.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
             </div>
           </div>
 
