feat: Make content wider when screen is wide

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div><!-- content-header -->
 
       <div class="content-body" id="body-permissions" style="display: none;">
-        <div class="container pd-x-0">
+        <div class="container-fluid pd-x-0">
           <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
             <div>
               <nav aria-label="breadcrumb">
@@ -264,7 +264,7 @@
       </div>
 
       <div class="content-body" id="body-bytag" style="display: none;">
-        <div class="container pd-x-0">
+        <div class="container-fluid pd-x-0">
           <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
             <div>
               <nav aria-label="breadcrumb">
@@ -339,7 +339,7 @@
       </div>
 
       <div class="content-body" id="body-dashboard" style="display: none;">
-        <div class="container pd-x-0">
+        <div class="container-fluid pd-x-0">
           <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
             <div>
               <nav aria-label="breadcrumb">
@@ -449,7 +449,7 @@
       </div>
 
       <div class="content-body" id="body-usage" style="display: none;">
-        <div class="container pd-x-0">
+        <div class="container-fluid pd-x-0">
           <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
             <div>
               <nav aria-label="breadcrumb">
@@ -607,7 +607,7 @@
       </div>
 
       <div class="content-body" id="body-managedpolicies" style="display: none;">
-        <div class="container pd-x-0">
+        <div class="container-fluid pd-x-0">
           <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
             <div>
               <nav aria-label="breadcrumb">
@@ -676,7 +676,7 @@
       </div>
 
       <div class="content-body" id="body-managedpolicy" style="display: none;">
-        <div class="container pd-x-0">
+        <div class="container-fluid pd-x-0">
           <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
             <div>
               <nav aria-label="breadcrumb">
@@ -757,7 +757,7 @@
       </div>
 
       <div class="content-body" id="body-policyevaluator" style="display: none;">
-        <div class="container pd-x-0">
+        <div class="container-fluid pd-x-0">
           <div class="d-sm-flex align-items-center justify-content-between mg-b-20 mg-lg-b-25 mg-xl-b-30">
             <div>
               <nav aria-label="breadcrumb">
