Add resource applicability checkbox

--- a/index.html
+++ b/index.html
@@ -780,6 +780,10 @@
                   </div>
                 </div><!-- card-header -->
                 <textarea class="form-control custompolicy mg-t-10 mg-r-10 mg-l-10 mg-b-10" style="width: auto;" rows="10" placeholder="Enter your policy here..."></textarea>
+                <div class="custom-control custom-checkbox mg-r-10 mg-l-10 mg-b-8">
+                  <input type="checkbox" class="custom-control-input" id="custompolicy-considerarn">
+                  <label class="custom-control-label" for="custompolicy-considerarn">Consider resource applicability to action</label>
+                </div>
               </div><!-- card -->
             </div><!-- col -->
             <div class="col-lg-12 col-xl-12 mg-t-12">
