Add default custom policy

--- a/index.html
+++ b/index.html
@@ -779,7 +779,16 @@
                     <p class="tx-13 tx-color-03 mg-b-10">Enter your IAM policy in the box below.</p>
                   </div>
                 </div><!-- card-header -->
-                <textarea class="form-control custompolicy mg-t-10 mg-r-10 mg-l-10 mg-b-10" style="width: auto;" rows="10" placeholder="Enter your policy here..."></textarea>
+                <textarea class="form-control custompolicy mg-t-10 mg-r-10 mg-l-10 mg-b-10" style="width: auto;" rows="10" placeholder="Enter your policy here...">{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Action": [],
+            "Effect": "Allow",
+            "Resource": []
+        }
+    ]
+}</textarea>
                 <div class="custom-control custom-checkbox mg-r-10 mg-l-10 mg-b-8">
                   <input type="checkbox" class="custom-control-input" id="custompolicy-considerarn">
                   <label class="custom-control-label" for="custompolicy-considerarn">Consider resource applicability to action</label>
