--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <a id="search-nav" href="">
           <div class="content-search">
             <i data-feather="search"></i>
-            <p class="tx-color-03" style="margin-top: 1.2rem;">Type <kbd class="info">/</kbd> to search...</p>
+            <p class="tx-color-03" style="margin-top: 1.2rem;">Type <kbd class="info bg-ui-04">/</kbd> to search...</p>
           </div>
         </a>
 
