Add grantless tag

--- a/index.html
+++ b/index.html
@@ -515,6 +515,10 @@
                         <td>A managed policy or managed policy action tag that indicates the presence of an action that could potentially lead to a privilege escalation.</td>
                       </tr>
                       <tr>
+                        <td><span class="badge badge-warning">grantless</span></td>
+                        <td>A managed policy tag that indicates the policy does not explicitely allow actions. These policies are typically used as Service Control Policies.</td>
+                      </tr>
+                      <tr>
                         <td><span class="badge badge-danger">undocumented actions</span></td>
                         <td>A managed policy tag that indicates the presence of undocumented actions within the policy.</td>
                       </tr>
