Use new endpoint

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
     <title>Permissions Reference for AWS IAM | aws.permissions.cloud</title>
 
-    <link rel="preload" href="https://iann0036.github.io/iam-dataset/aws/map.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://iann0036.github.io/iam-dataset/aws/docs.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://iann0036.github.io/iam-dataset/aws/tags.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://iann0036.github.io/iam-dataset/aws/iam_definition.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/map.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/docs.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/tags.json" as="fetch" crossorigin>
+    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/iam_definition.json" as="fetch" crossorigin>
 
     <!-- omnibox search -->
     <link rel="search" href="https://aws.permissions.cloud/search.xml" type="application/opensearchdescription+xml" title="aws.permissions.cloud"/>
