Re-pin direct JSON links to GH repo

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <h4 class="mg-b-0 tx-spacing--1">Permissions Reference for <span class='servicename'></span></h4>
             </div>
             <div class="d-none d-md-block">
-              <a id="permissions-json-link" href="https://aws.permissions.cloud/iam-dataset/aws/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
+              <a id="permissions-json-link" href="https://raw.githubusercontent.com/iann0036/iam-dataset/refs/heads/main/aws/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
               <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase mg-l-5 display-iam api-link" style="display: none;"><i data-feather="code" class="wd-10 mg-r-5"></i> Switch to API</button>
               <button class="btn btn-sm pd-x-15 btn-primary btn-uppercase mg-l-5 display-api iam-link" style="display: none;"><i data-feather="lock" class="wd-10 mg-r-5"></i> Switch to IAM</button>
             </div>
@@ -276,7 +276,7 @@
               <h4 class="mg-b-0 tx-spacing--1">Permissions Reference for Tag <span class='tagname'></span></h4>
             </div>
             <div class="d-none d-md-block">
-              <a id="permissions-json-link" href="https://aws.permissions.cloud/iam-dataset/aws/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
+              <a id="permissions-json-link" href="https://raw.githubusercontent.com/iann0036/iam-dataset/refs/heads/main/aws/map.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
             </div>
           </div>
 
@@ -623,7 +623,7 @@
               <h4 class="mg-b-0 tx-spacing--1">Managed Policies</h4>
             </div>
             <div class="d-none d-md-block">
-              <a href="https://aws.permissions.cloud/iam-dataset/aws/managed_policies.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
+              <a href="https://raw.githubusercontent.com/iann0036/iam-dataset/refs/heads/main/aws/managed_policies.json" target="_blank"><button class="btn btn-sm pd-x-15 btn-white btn-uppercase mg-l-5"><i data-feather="download" class="wd-10 mg-r-5"></i> Download JSON</button></a>
             </div>
           </div>
 
