Use relative paths.
Signed-off-by: gum0x <25650689+gum0x@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta property="og:title" content="aws.permissions.cloud">
     <meta property="og:description" content="Permissions Reference for AWS IAM">
 
-    <meta property="og:image" content="https://aws.permissions.cloud/assets/img/social.png">
-    <meta property="og:image:secure_url" content="https://aws.permissions.cloud/assets/img/social.png">
+    <meta property="og:image" content="/assets/img/social.png">
+    <meta property="og:image:secure_url" content="/assets/img/social.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="600">
@@ -34,13 +34,13 @@
 
     <title>Permissions Reference for AWS IAM | aws.permissions.cloud</title>
 
-    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/map.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/docs.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/tags.json" as="fetch" crossorigin>
-    <link rel="preload" href="https://aws.permissions.cloud/iam-dataset/aws/iam_definition.json" as="fetch" crossorigin>
+    <link rel="preload" href="/iam-dataset/aws/map.json" as="fetch" crossorigin>
+    <link rel="preload" href="/iam-dataset/aws/docs.json" as="fetch" crossorigin>
+    <link rel="preload" href="/iam-dataset/aws/tags.json" as="fetch" crossorigin>
+    <link rel="preload" href="/iam-dataset/aws/iam_definition.json" as="fetch" crossorigin>
 
     <!-- omnibox search -->
-    <link rel="search" href="https://aws.permissions.cloud/search.xml" type="application/opensearchdescription+xml" title="aws.permissions.cloud"/>
+    <link rel="search" href="/search.xml" type="application/opensearchdescription+xml" title="aws.permissions.cloud"/>
 
     <!-- vendor css -->
     <link href="/lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
