add search by servicec
Signed-off-by: gum0x <25650689+gum0x@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
             <a id="navbarSearchClose" href="" class="link-03 mg-l-5 mg-lg-l-10"><i data-feather="x"></i></a>
           </div><!-- navbar-search-header -->
           <div class="navbar-search-body">
+            <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-5 d-flex align-items-center">Services</label>
+            <ul id="search-service-list" class="list-unstyled" style="flex-wrap: wrap;">
+            </ul>
+
+            <hr class="mg-y-30 bd-0">
             <label class="tx-10 tx-medium tx-uppercase tx-spacing-1 tx-color-03 mg-b-5 d-flex align-items-center">IAM Permissions</label>
             <ul id="search-iam-list" class="list-unstyled" style="flex-wrap: wrap;">
             </ul>
